--- a/style.css
+++ b/style.css
@@ -18,5 +18,45 @@ section{
     color: white;
 }
 .width img{
-    width: 60%;
+    width: 70%;
 }
+
+/*------------- 
+  product style
+  -------------  */
+  .products{
+      display: grid;
+      grid-template-columns: repeat(3, 1fr)
+    } 
+    .products{
+        grid-column-gap: 24px;
+        margin-left: 50px;
+        margin-top: 30px;
+    }
+  .product .product-banner img{
+      height: 104px;
+      width: 224px;
+  }
+  .product-info{
+      display: flex;
+      color: #ffc014;
+      font-size: 12px;
+      align-items: center;
+  }
+  .rating{
+      color: black;
+  }
+  a{
+      text-decoration: none;
+      color: crimson;
+  }
+  .Third{
+      justify-content: center;
+  }
+  footer{
+      background-color: lightslategrey;
+      text-align: center;
+      color: white;
+      width: 100%;
+      margin-top: 10px;
+  }
